# ChangeLog for sys-apps/calculate-lib
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-lib-2.2.0.0_rc1 (21 Jun 2010)

  21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.2.0.0_rc1.ebuild:
  Added first release candidate calculate-lib-2.2.0.0.

  04 May 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  calculate-lib-2.2.9999.ebuild, calculate-lib-9999.ebuild:
  Fix git path.

*calculate-lib-2.1.10 (20 Apr 2010)

  20 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.10.ebuild:
  Bump version.

*calculate-lib-2.1.9 (16 Apr 2010)

  16 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.9.ebuild:
  Bump version.

  10 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-lib-2.1.1.ebuild, -calculate-lib-2.1.2.ebuild,
  -calculate-lib-2.1.3-r1.ebuild, -calculate-lib-2.1.4.ebuild,
  -calculate-lib-2.1.5.ebuild:
  Removed Calculate lib which has version less 2.1.7.

*calculate-lib-2.1.8 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.8.ebuild:
  Bump version.

*calculate-lib-2.1.7 (15 Mar 2010)

  15 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.7.ebuild:
  Bump version.

*calculate-lib-2.1.6 (03 Mar 2010)

  03 Mar 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.6.ebuild:
  Version bump.

*calculate-lib-2.1.4 (01 Dec 2009)

  01 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +calculate-lib-2.1.4.ebuild, +metadata.xml:
  Ebuild for new version of calculate-lib.
