@@ -8,6 +8,7 @@
 sys-apps/calculate-client amd64 x86
 sys-apps/calculate-desktop amd64 x86
 sys-apps/calculate-lib amd64 x86
+sys-apps/calculate-templates amd64 x86
 ~x11-libs/qtermwidget-0.1 amd64 x86
 
 ~media-sound/amarok-2.3.1 amd64 x86
