@@ -3,6 +3,7 @@
 =sys-apps/calculate-install-2.2.9999 amd64 x86
 =app-misc/calculate-install-gui-2.2.9999 amd64 x86
 sys-apps/calculate-lib amd64 x86
+sys-apps/calculate-templates amd64 x86
 
 ~x11-libs/qtermwidget-0.1 amd64 x86
 
