@@ -5,3 +5,4 @@ app-misc/calculate-install-gui
 sys-apps/calculate
 sys-apps/calculate-install
 sys-apps/calculate-lib
+sys-apps/calculate-templates
