@@ -4,5 +4,6 @@
 
 =sys-apps/calculate-install-2.2.9999 amd64 x86
 sys-apps/calculate-lib amd64 x86
+sys-apps/calculate-templates amd64 x86
 
 ~app-misc/css-meta-10.5.83 amd64 x86
