@@ -3,3 +3,4 @@
 =sys-apps/calculate-9999 amd64 x86
 =sys-apps/calculate-install-2.2.9999 amd64 x86
 sys-apps/calculate-lib amd64 x86
+sys-apps/calculate-templates amd64 x86
