@@ -6,6 +6,7 @@
 =sys-apps/calculate-desktop-2.2.9999
 =sys-apps/calculate-install-2.2.9999
 =sys-apps/calculate-lib-2.2.9999
+=sys-apps/calculate-templates-2.2.9999
 =sys-apps/calculate-lib-9999
 =sys-apps/calculate-server-9999
 
