@@ -7,7 +7,7 @@ EBUILD calculate-lib-2.1.7.ebuild 578 RMD160 673b894f3992ce17a6f31e4deb292c647eb
 EBUILD calculate-lib-2.1.8.ebuild 578 RMD160 a76c3b9ab13bf4f69d002904d41b01889958adf9 SHA1 91cfabb263365be7800296969a48abfc831f0d8f SHA256 c796f7dfbc321c6580706b63780321efaaa50d9e7fc363bdfef6890365166d03
 EBUILD calculate-lib-2.1.9.ebuild 578 RMD160 44eda1d0ae1b1057c200380fc81786f31fd3ce2b SHA1 c7dee498dc17cf71dcef862c17be6b282f4bb63e SHA256 08244fbc8ba1fff546a96a7869708647a39e781c468d71b456821a22c59c4c56
 EBUILD calculate-lib-2.2.0.0_rc1.ebuild 546 RMD160 2f627b133cc70e7cacdd0429af64a917be209db2 SHA1 b30c6fbb0ec0c04cbf9389461560b51d4d44b2c5 SHA256 1ae3961829ca2382a721d1be1f12611682aa46404d95811d63c967ee010e3524
-EBUILD calculate-lib-2.2.9999.ebuild 467 RMD160 00555291e728b2b516083837a953b79aa61ce928 SHA1 9f52860b5fb3390fc6105bc3fe9a64fba4447728 SHA256 b4afcde7f0d86f8d09f7aec455b1abf1c6f72cb2f3c3a89e640b48843a20a7a3
+EBUILD calculate-lib-2.2.9999.ebuild 506 RMD160 f1ae34b1d57d203d7e3ccf31f89267fde76be502 SHA1 d165cb1974fb3dccd00c8d8fbd0ce7a2dcd0da11 SHA256 2f0e7a931c828e43c68e0aff0db9c7ec6d7069ca92025fcc8a6122bd523993a5
 EBUILD calculate-lib-9999.ebuild 476 RMD160 e510e0aa98b7f6da9acc37197073cac0d5d6a47f SHA1 393c416fcfd77d6c05aea8932a7a1e3805aa926d SHA256 a9eee592ec352db7852e93ad33249072307051d3bda6cfdcd034ea9b96747578
-MISC ChangeLog 1631 RMD160 566c98771a7e22637369a76a87a5c3065bf7b5b2 SHA1 52f99d3aa93415d3fd1d2b5340848b6f843be8b8 SHA256 98f86ae8b2b3d1c5f41f457d8e505b9c9f25d2012c75b2e767f8ce36702bbc28
+MISC ChangeLog 1778 RMD160 5162c9b94b86f20b6380591a698a2135a7c0de32 SHA1 aafbf738b9f58370a698c825209498b3cf7e166e SHA256 682fc87f558cb449407cc378c040b8c3a46f39c47b622c8e6daffa034d4a6528
 MISC metadata.xml 303 RMD160 774b65ed76939d6878496ad6ef6451849bdced05 SHA1 7d08569697a290ede98c88ab59db3cdc3037bd15 SHA256 181519d9679fd9aee9a7a9806733a50728d3da0b1e0ad54f31499200f7f5c6ec
