@@ -15,6 +15,7 @@ SLOT="2.2"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 
-DEPEND=">=dev-python/python-ldap-2.0[ssl]
-		>=dev-python/pyxml-0.8"
+DEPEND="~sys-apps/calculate-templates-2.2.9999
+	>=dev-python/python-ldap-2.0[ssl]
+	>=dev-python/pyxml-0.8"
 RDEPEND="${DEPEND}"
