@@ -1,0 +1,3 @@
+EBUILD calculate-templates-2.2.9999.ebuild 518 RMD160 bcb803a1f96262ea96f424493ca3c6fbc468d132 SHA1 cdcea04e2b733c1aab7f71284a83f3c59c9d8ac0 SHA256 b05d798094dd6e5644d1ac4fb8e9238433a9a557d74318ace8a46fbf09bc794a
+MISC ChangeLog 356 RMD160 123fa413a6a5eff43db5c78e4293759f1997b3bf SHA1 7e5b90e2216dc0d4943251d4d5c4a6df4f9f8909 SHA256 9f5073b7a0214276da3055f6a4310852e41cda88e65d463f68d0e2da5adb0158
+MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
