@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>maintainer-wanted</herd>
+<longdescription lang="en">
+Templates for calculate utilities 2.2: calculate-install, calculate-client, calculate-desktop.
+Part of Calculate Linux.
+</longdescription>
+</pkgmetadata>
+
