@@ -1,0 +1,10 @@
+# ChangeLog for sys-apps/calculate-templates
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: $
+
+*calculate-templates-2.2.9999 (03 Aug 2010)
+
+  03 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-templates-2.2.9999.ebuild, +metadata.xml:
+  Added new live ebuild for templates of calculate utilities 2.2.
+
