@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  calculate-lib-2.2.9999.ebuild:
+  Added depend of 2.2.9999 from calculate-templates.
+
 *calculate-lib-2.2.0.0_rc1 (21 Jun 2010)
 
   21 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
